# obsidian-vault-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
debian/: build-deb.sh  control  postinst  prerm
examples/: config.example.json
obsidian_couch_sync/: cli.py  config.py  couch.py  livesync.py  state.py  syncer.py
systemd/: obsidian-couch-sync.service
tests/: test_livesync.py
