[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-couch-sync"
version = "0.1.0"
description = "Headless Markdown-to-CouchDB sync for Obsidian Self-hosted LiveSync style vaults"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Obsidian Couch Sync contributors" }
]
keywords = ["obsidian", "couchdb", "livesync", "sync", "markdown"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[project.urls]
Homepage = "https://github.com/yeideal/obsidian-couch-sync"
Issues = "https://github.com/yeideal/obsidian-couch-sync/issues"

[project.scripts]
obsidian-couch-sync = "obsidian_couch_sync.cli:main"
ocs = "obsidian_couch_sync.cli:main"

[tool.setuptools.packages.find]
include = ["obsidian_couch_sync*"]
